--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,4 +18,8 @@ logging:
   level:
     org.hibernate.sql: debug
 
+kakao:
+  rest-api-key: c7b3d4c354d87e9267f8e8e1c2bf252f
+  base-url: https://dapi.kakao.com
+
 
