--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,10 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	//.env 파일 읽기 만들기
+	implementation("me.paulschwarz:spring-dotenv:4.0.0")
+
 }
 
 tasks.named('test') {
