--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 	//.env 파일 읽기 만들기
 	implementation("me.paulschwarz:spring-dotenv:4.0.0")
 
+	// 가짜 웹서버
+	testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
+
 }
 
 tasks.named('test') {
