feat: kakao -> naver fallback 구현 restclient 임시 차단

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,4 +22,10 @@ kakao:
   rest-api-key: ${KAKAO_REST_API_KEY}
   base-url: https://dapi.kakao.com
 
+naver:
+  base-url: https://openapi.naver.com
+  client-id: 73dIeysEyxaupJcnPwVX
+  client-secret: ${NAVER_REST_API_KEY}
+
+
 
