--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 	// 가짜 웹서버
 	testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
 
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
 }
 
 tasks.named('test') {
