test: BlogSearch 테스트 수정

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -17,3 +17,8 @@ logging.level.org.hibernate.SQL: debug
 kakao:
   base-url: https://dapi.kakao.com
   rest-api-key: test-api-key
+
+naver:
+  base-url: https://openapi.naver.com
+  client-id: test-id
+  client-secret: test-api-key
