--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,11 @@ spring:
     console:
       enabled: true
       path: /h2-console
+  data:
+    redis:
+      port: 6379
+      host: localhost
+
 logging:
   level:
     org.hibernate.sql: debug
@@ -26,6 +31,7 @@ naver:
   base-url: https://openapi.naver.com
   client-id: 73dIeysEyxaupJcnPwVX
   client-secret: ${NAVER_REST_API_KEY}
+
 
 
 
